[gd_scene load_steps=8 format=3 uid="uid://cewg4nav8seea"]

[ext_resource type="Script" path="res://hud.gd" id="1_2mnwi"]
[ext_resource type="FontFile" uid="uid://bjcfht4xj8c8j" path="res://fonts/Xolonium-Regular.ttf" id="2_m6jrm"]
[ext_resource type="PackedScene" uid="uid://bfa1fh70afpio" path="res://pause_menu.tscn" id="3_7gqrx"]

[sub_resource type="InputEventAction" id="InputEventAction_gmhl3"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_8wlcs"]
events = [SubResource("InputEventAction_gmhl3")]

[sub_resource type="InputEventAction" id="InputEventAction_1y2pq"]
action = &"quit_game"

[sub_resource type="Shortcut" id="Shortcut_066yw"]
events = [SubResource("InputEventAction_1y2pq")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_2mnwi")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.5
offset_right = 45.5
offset_bottom = 78.0
grow_horizontal = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_m6jrm")
theme_override_font_sizes/font_size = 64
text = "10"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -240.0
offset_right = 240.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_m6jrm")
theme_override_font_sizes/font_size = 64
text = "Dodge!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -190.0
offset_right = 100.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_m6jrm")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_8wlcs")
text = "start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DodgeLabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -78.0
offset_right = 140.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_m6jrm")
theme_override_font_sizes/font_size = 64
text = "Dodged: 0"

[node name="TopScoreText" type="Label" parent="."]
offset_left = 26.0
offset_top = 82.0
offset_right = 456.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("2_m6jrm")
theme_override_font_sizes/font_size = 64
text = "Top Score: "

[node name="TopScoreNum" type="Label" parent="."]
offset_left = 413.0
offset_top = 86.0
offset_right = 458.0
offset_bottom = 164.0
theme_override_fonts/font = ExtResource("2_m6jrm")
theme_override_font_sizes/font_size = 64
text = "0
"

[node name="QuitButton" type="Button" parent="."]
offset_left = 437.0
offset_right = 476.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("2_m6jrm")
theme_override_font_sizes/font_size = 40
shortcut = SubResource("Shortcut_066yw")
text = "X"

[node name="SettingButton" type="Button" parent="."]
offset_left = 394.0
offset_right = 434.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("2_m6jrm")
theme_override_font_sizes/font_size = 40
text = "S"

[node name="PauseMenu" parent="." instance=ExtResource("3_7gqrx")]

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="close_pause_menu" from="PauseMenu" to="." method="_on_pause_menu_close_pause_menu"]
